--- a/src/styles/day.css
+++ b/src/styles/day.css
@@ -2,10 +2,25 @@
   color: white;
   border-radius: 5px;
   border: 1px solid white;
-  max-width: 500px;
+  width: 300px;
   display: inline-block;
   height: 400px;
   padding: 20px;
+  margin: 20px;
+}
+
+.dayTitle {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+.sleepInput {
+  display: grid;
+  grid-template-columns: 0.6fr 0.4fr;
+  justify-items: start;
+  align-items: center;
+  /* border: 1px solid white; */
+  padding: 10px;
 }
 
 button {
@@ -14,12 +29,7 @@ button {
   border-radius: 5px;
   outline-style: none;
   color: white;
-}
-
-input {
-  background-color: transparent;
-  outline-style: none;
-  border: none;
-  font-size: 1em;
-  color: white;
+  height: 30px;
+  width: 30px;
+  margin: 40px;
 }
