--- a/src/styles/taskSet.css
+++ b/src/styles/taskSet.css
@@ -4,12 +4,17 @@
   /* border: 1px solid white; */
   display: grid;
   grid-template-columns: 0.6fr 0.4fr;
-  grid-gap: 20px;
-  justify-items: center;
+  /* grid-gap: 20px; */
+  /* justify-items: center; */
   background-color: transparent;
 }
 
-.taskSet > input {
+.timeInputContainer {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+}
+
+.input {
   outline-style: none;
   /* border: 1px solid white; */
   border: none;
@@ -18,4 +23,8 @@
   width: 100%;
   color: white;
   padding: 0px;
+}
+
+.timeUnit {
+  align-self: end;
 }
